WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
189185
Fix exception check accounting in constructJSWebAssemblyCompileError().
https://bugs.webkit.org/show_bug.cgi?id=189185
Summary
Fix exception check accounting in constructJSWebAssemblyCompileError().
Mark Lam
Reported
2018-08-31 00:06:21 PDT
<
rdar://problem/39786007
>
Attachments
proposed patch.
(3.54 KB, patch)
2018-08-31 00:15 PDT
,
Mark Lam
no flags
Details
Formatted Diff
Diff
Patch
(987 bytes, patch)
2018-09-04 10:55 PDT
,
Dawei Fenton (:realdawei)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Lam
Comment 1
2018-08-31 00:15:19 PDT
Created
attachment 348616
[details]
proposed patch.
Michael Saboff
Comment 2
2018-08-31 09:47:15 PDT
Comment on
attachment 348616
[details]
proposed patch. r=me
WebKit Commit Bot
Comment 3
2018-08-31 10:12:39 PDT
Comment on
attachment 348616
[details]
proposed patch. Clearing flags on attachment: 348616 Committed
r235558
: <
https://trac.webkit.org/changeset/235558
>
WebKit Commit Bot
Comment 4
2018-08-31 10:12:40 PDT
All reviewed patches have been landed. Closing bug.
Saam Barati
Comment 5
2018-08-31 11:30:46 PDT
Comment on
attachment 348616
[details]
proposed patch. View in context:
https://bugs.webkit.org/attachment.cgi?id=348616&action=review
> Source/JavaScriptCore/wasm/js/JSWebAssemblyModule.cpp:51 > + auto* error = JSWebAssemblyCompileError::create(exec, vm, structure->globalObject()->WebAssemblyCompileErrorStructure(), result.error());
Why would creating the exception throw an exception?
Mark Lam
Comment 6
2018-08-31 14:01:41 PDT
(In reply to Saam Barati from
comment #5
)
> Comment on
attachment 348616
[details]
> proposed patch. > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=348616&action=review
> > > Source/JavaScriptCore/wasm/js/JSWebAssemblyModule.cpp:51 > > + auto* error = JSWebAssemblyCompileError::create(exec, vm, structure->globalObject()->WebAssemblyCompileErrorStructure(), result.error()); > > Why would creating the exception throw an exception?
See "static JSWebAssemblyCompileError* create(ExecState* exec, VM& vm, Structure* structure, JSValue message)" in JSWebAssemblyCompileError.h. It calls message.toWTFString(exec) which can throw.
Saam Barati
Comment 7
2018-08-31 14:54:39 PDT
(In reply to Mark Lam from
comment #6
)
> (In reply to Saam Barati from
comment #5
) > > Comment on
attachment 348616
[details]
> > proposed patch. > > > > View in context: > >
https://bugs.webkit.org/attachment.cgi?id=348616&action=review
> > > > > Source/JavaScriptCore/wasm/js/JSWebAssemblyModule.cpp:51 > > > + auto* error = JSWebAssemblyCompileError::create(exec, vm, structure->globalObject()->WebAssemblyCompileErrorStructure(), result.error()); > > > > Why would creating the exception throw an exception? > > See "static JSWebAssemblyCompileError* create(ExecState* exec, VM& vm, > Structure* structure, JSValue message)" in JSWebAssemblyCompileError.h. It > calls message.toWTFString(exec) which can throw.
Ok, makes sense.
Dawei Fenton (:realdawei)
Comment 8
2018-09-04 10:55:31 PDT
Reopening to attach new patch.
Dawei Fenton (:realdawei)
Comment 9
2018-09-04 10:55:32 PDT
Created
attachment 348827
[details]
Patch
WebKit Commit Bot
Comment 10
2018-09-04 11:53:54 PDT
Comment on
attachment 348827
[details]
Patch Clearing flags on attachment: 348827 Committed
r235624
: <
https://trac.webkit.org/changeset/235624
>
WebKit Commit Bot
Comment 11
2018-09-04 11:53:55 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug