JSTests/stress/regress-189185.js
@@ -1,0 +1,7 @@
+//@ runDefault
+// This passes if it does not crash.
+new WebAssembly.CompileError({
+    valueOf() {
+        throw new Error();
+    }
+});
